DRW: Reduce number of bits used to store shape indice

Fix #108901