source/blender/draw/intern/shaders/common_pointcloud_lib.glsl
@@ -14,7 +14,8 @@
 int pointcloud_get_point_id()
 {
 #  ifdef GPU_VERTEX_SHADER
-  return gl_VertexID / 32;
+  /* Remove shape indices. */
+  return gl_VertexID >> 3;
 #  endif
   return 0;
 }
@@ -46,10 +47,10 @@ void pointcloud_get_pos_nor_radius(out vec3 outpos, out vec3 outnor, out float o
 
   mat3 facing_mat = pointcloud_get_facing_matrix(p);
 
-  int vert_id = 0;
+  uint vert_id = 0u;
 #  ifdef GPU_VERTEX_SHADER
-  /* NOTE: Avoid modulo by non-power-of-two in shader. See Index buffer setup. */
-  vert_id = gl_VertexID % 32;
+  /* Mask point indices. */
+  vert_id = uint(gl_VertexID) & ~(0xFFFFFFFFu << 3u);
 #  endif
 
   vec3 pos_inst = vec3(0.0);
